# PETs-Bootcamp

./: .gitignore  Mustafa's notebook for differential privacy.ipynb  README.md
.ipynb_checkpoints/: Mustafa's notebook for differential privacy-checkpoint.ipynb
DP_TensorFlowPrivacy/: LICENSE  README.md  TFP_HeartDisease_LogisticRegression.ipynb
DP_TensorFlowPrivacy/.ipynb_checkpoints/: TFP_HeartDisease_LogisticRegression-checkpoint.ipynb
DP_TensorFlowPrivacy_StreamlitDemo/: LICENSE  README.md  demo.py  pyproject.toml  requirements.txt  train.py
HE_TenSEAL/: HE_Basics.ipynb  HE_Private_MLP.ipynb  README.md  requirements.txt
HE_TenSEAL/.ipynb_checkpoints/: HE_Private_MLP-checkpoint.ipynb
HFL_Kidney_Histopathology/: HFL_WSI_part2.ipynb  README.md  Untitled.ipynb
HFL_Tabular/: Federated_DifferentialPrivacy.ipynb  README.md  TFF-FL-breast-cancer.ipynb  TFF-FL-home_credit.ipynb  TFF-FL-home_credit_RH.ipynb  TFF-FL-home_credit_RH_DP.ipynb  TFF-FL-home_credit_RH_fed_vs_unfed.ipynb  TFF-FL-home_credit_RH_preprocess.ipynb  TFF-FL-home_credit_RH_undersample.ipynb  TFF-FL-sara-breast-cancer.ipynb
HFL_on_images/: HFL_for_image_classification.py  HFL_for_image_dataset.ipynb  README.md
Membership_Inference_Attacks/: Membership_Inference_Attacks_with_Tensorflow_Privacy.ipynb  README.md  pyproject.toml  requirements.txt
Membership_Inference_Attacks/.ipynb_checkpoints/: Membership_Inference_Attacks_with_Tensorflow_Privacy-checkpoint.ipynb
PATE/: PATE Ground Up.ipynb  PATE_Waqar_V2.ipynb  PETA - 2 Waqar.ipynb  PETA - Waqar M .ipynb  README.md  demo.ipynb  pate_data_preprocessing.ipynb  pyproject.toml
PATE/.ipynb_checkpoints/: PATE_Waqar_V2-checkpoint.ipynb  PETA - 2 Waqar-checkpoint.ipynb  PETA - Waqar M -checkpoint.ipynb  demo-checkpoint.ipynb
VFL_PySyft_SplitNN/: DataLoader.py  Dataset.py  README.md  VFL_with_DP_home_credit.ipynb  custom_steps.py  demo.ipynb  main.py  models.py  prepare_dataloader.py  pyproject.toml  requirements.txt  train.py  vfl_data_preprocessing.ipynb
VFL_PySyft_SplitNN/.ipynb_checkpoints/: demo-checkpoint.ipynb  demo_jt-checkpoint.ipynb
VFL_PySyft_SplitNN/src/: __init__.py  data_loader.py  dataloader.py  dataset.py  model.py
VFL_PySyft_SplitNN/src/utils/: data_utils.py
data_utilities/: connex_data_dictionary.md  load_airbnb.ipynb  load_connex_data.ipynb  load_mimic.ipynb  load_yelp_data.ipynb  load_yelp_data_original.ipynb  mimic_download.sh
data_utilities/.ipynb_checkpoints/: load_mimic-checkpoint.ipynb
intact/: Caravan_EDA_Feature_Engineering.ipynb  EDA_NN_caravan.ipynb  EDA_caravan_Feature_check.ipynb  README.md  VFL_intact.ipynb  baseline.ipynb  maryse-caravan.ipynb
intact/.ipynb_checkpoints/: VFL_intact-checkpoint.ipynb
pet_dp_hao/: DP_hao.ipynb
pet_dp_hao/.ipynb_checkpoints/: DP_hao-checkpoint.ipynb
pet_dp_mus/: Mustafa's notebook for differential privacy.ipynb  Mustafa-2.ipynb  PET_DP.ipynb  pet_dp_CIBC.ipynb
resources/: README.md
(+84 files in other folders)
