[tool.poetry]
name = "membership_inference_attacks"
version = "0.1.0"
description = "Membership Inference Attacks (MIA) on Machine Learning Models"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = { version = "^1.21.4", python = ">=3.9,<3.11" }
notebook = "^6.4.6"
tensorflow = "^2.7.0"
tensorflow-privacy = "^0.7.3"
tensorflow-io-gcs-filesystem = { version = "0.22.0", python = ">=3.9,<3.10" }
scipy = { version = "^1.7.3", python = ">=3.9,<3.11" }
matplotlib = "^3.5.0"
sklearn = "^0.0"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
