[tool.poetry]
name = "membership_inference_attacks"
version = "0.1.0"
description = "Membership Inference Attacks (MIA) on Machine Learning Models"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8.0"
numpy = "^1.21.4"
matplotlib = "^3.5.0"
tensorflow = "^2.7.0"
scipy = "^1.7.3"
tensorflow-privacy = "^0.7.3"
jupyter = "^1.0.0"
sklearn = "^0.0"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
